container-orchestration/istio/api-istio/api.istio.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: people-api-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - people-api-gateway
  http:
  - match:
    - uri:
        exact: /api/people
    route:
    - destination:
        host: people-api
        port:
          number: 5004
